--- a/sds_door_app/pubspec.yaml
+++ b/sds_door_app/pubspec.yaml
@@ -17,11 +17,21 @@ dependencies:
   modal_progress_hud: ^0.1.3
   shared_preferences: ^0.5.12+4
   firebase_database: ^4.4.0
+  firebase_image: ^0.3.0
+  oktoast: ^2.3.2
+  fluttertoast: ^7.1.6
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/door_open.png"
+  
 
 flutter:
 
